--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Shared libraries for fitness logger.",
   "main": "dist/index.js",
   "scripts": {
-    "build": "rm -rf ./dist && tsc",
+    "build": "tsc",
     "dev:test": "nodemon --watch . --ext ts --exec \"mocha -r ts-node/register src/**/*.test.ts\"",
     "ci:test": "mocha -r ts-node/register src/**/*.test.ts",
-    "link:locally": "npm run build && npm link"
+    "link:locally": "npm link",
+    "link:shared": "npm link @jamestiberiuskirk/fl-shared"
   },
   "author": "Dumitru Vulpe",
   "license": "ISC",
@@ -15,6 +16,8 @@
     "@microsoft/tsdoc": "^0.12.24",
     "@microsoft/tsdoc-config": "^0.13.9",
     "@types/chai": "^4.2.14",
+    "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/mocha": "^8.0.4",
     "@types/node": "^14.14.10",
     "chai": "^4.2.0",
@@ -28,5 +31,10 @@
   },
   "repository": {
     "url": "git@github.com:JamesTiberiusKirk/fitness-logger.git"
+  },
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1"
   }
 }
