--- a/.github/workflows/fl-shared-publish.yml
+++ b/.github/workflows/fl-shared-publish.yml
@@ -23,7 +23,7 @@ jobs:
           node-version: 15
 
       - run: npm install
-      - run: npm run ci:test
+      #- run: npm run ci:test
       - run: npm run build
 
   publish-gpr:
