--- a/.github/workflows/fl-shared-publish.yml
+++ b/.github/workflows/fl-shared-publish.yml
@@ -42,8 +42,8 @@ jobs:
       - run: npm run build
       - run: npm config set //registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN
         env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          NODE_AUTH_TOKEN: ${{secrets.TOKEN}}
 
       - run: npm publish 
         env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          NODE_AUTH_TOKEN: ${{secrets.TOKEN}}
