--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mocha": "^8.0.4",
+    "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.10",
     "chai": "^4.2.0",
     "mocha": "^8.2.1",
@@ -34,6 +35,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0"
   }
 }
