--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jamestiberiuskirk/fl-shared",
-  "version": "0.0.13",
+  "version": "0.0.14",
   "description": "Shared libraries for fitness logger.",
   "main": "dist/index.js",
   "scripts": {
@@ -33,6 +33,7 @@
     "url": "git@github.com:JamesTiberiusKirk/fitness-logger.git"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
